<resources>
    <string name="app_name">INSOPTAndroidPractice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_sopt">Welcome to SOPT</string>
    <string name="id">ID</string>
    <string name="et_id">아이디를 입력하세요</string>
    <string name="tv_pw">비밀번호</string>
    <string name="et_pw">비밀번호를 입력하세요</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="signup_title">SIGNUP</string>
    <string name="id_signup">ID</string>
    <string name="tv_pw_signup">비밀번호</string>
    <string name="et_pw_signup">비밀번호를 입력하세요</string>
    <string name="tv_name_signup">이름</string>
    <string name="et_name_signup">이름을 입력하세요</string>
    <string name="signup_finish">회원가입 완료</string>
    <string name="tv_pw_warn">비밀번호 형식이 올바르지 않습니다.</string>
    <string name="tv_id_warn">아이디 형식이 올바르지 않습니다.</string>
    <string name="et_id_signup">아이디를 입력하세요</string>
</resources>